--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "Node.js-Random-Color-Generator",
   "version": "1.0.0",
-  "type": "module",
   "description": "This app creates random color patterns",
+  "keywords": [],
+  "license": "MIT",
+  "author": "Niko Fotopoulos",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "Niko Fotopoulos",
-  "license": "MIT",
   "devDependencies": {
     "eslint-config-upleveled": "^5.0.4",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "randomcolor": "^0.6.2"
   }
 }
