--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/randomcolor": "^0.5.7",
     "eslint-config-upleveled": "^5.0.4",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "randomcolor": "^0.6.2"
   }
 }
